<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">STChat</string>
    <string name="no_data">Nothing here</string>
    
    <string name="chat_loading">Loading…</string>
    <string name="add_friend">Add Contacts</string>
    <string name="create_group">Create a Room</string>
    <string name="add_user">please enter…</string>
    <string name="search">Search…</string>
    <string name="room_name">room name</string>
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    
    <string name="image_content">Image</string>
    <string-array name="thread_menu"> 
        <item >Copy</item> 
        <item >Resend</item> 
        <item >Delete</item> 
    </string-array> 
        <string-array name="my_state"> 
        <item >Free To Chat</item> 
        <item >Available</item> 
        <item >Away</item> 
        <item >On Phone</item> 
        <item >Extended Away</item> 
        <item >On The Road</item> 
         <item >Do Not Disturb</item>
    </string-array> 
         <string name="search_">Search:</string> 
         <string name="individuality_signature">Individuality signature</string> 
         <string name="addname">AddName</string> 
         <string name="title">Title</string> 
         <string name="admin">admin</string> 
         <string name="delete">Delete</string> 
         <string name="cancel">cancel</string> 
         <string name="time">00:00</string> 
         <string name="unknown">unknown</string> 
         <string name="content_content_content">content----content----content</string> 
         <string name="from_name_">----From_Name----</string> 
         <string name="item_title">item_title</string> 
         <string name="mse">mse</string> 
         <string name="item_time">2012-12-5</string> 
         <string name="unread_chat_number">1</string> 
         <string name="available">Available</string> 
         <string name="photo_album">Photo Album</string> 
         <string name="settings">Settings</string> 
         <string name="mes_title">mes_title</string> 
         <string name="recommended_friends">Recommended Friends</string> 
         <string name="rooms">Rooms</string> 
         <string name="chat_room_name">chat_room_name</string> 
         <string name="hold_a_speech">Hold a speech</string> 
         <string name="send">Send</string> 
         <string name="about_stchat">About STChat</string> 
         <string name="log_out">Log Out</string> 
         <string name="register">Register</string> 
         <string name="_my_head">头像</string> 
         <string name="_my_honey_name">昵称</string> 
         <string name="juwei">juwei</string> 
         <string name="st_number">ST号</string> 
         <string name="juwei_divcloud_net">juwei@divcloud.net</string> 
         <string name="_my_erweima">二维码名片</string> 
         <string name="_my_erweima_">#</string> 
         <string name="_my_adds">我的地址</string> 
         <string name="_wuxixinqu">无锡新区国家软件...</string> 
         <string name="_18651577531">18651577531</string> 
         <string name="_my_number">电话</string> 
         <string name="_my_sex">性别</string> 
         <string name="_my_man">男</string> 
         <string name="_my_local">地区</string> 
         <string name="_my_jiangsuwuxi">江苏  无锡</string> 
         <string name="_my_gexingqianming">个性签名</string> 
         <string name="c2c_copy_to_china">C2C，Copy To China</string> 
         <string name="new_contact_name">Jonny</string> 
         <string name="jonny_add_you_as_a_friend">Jonny add you as a friend</string> 
         <string name="unread_user_num">1</string> 
         <string name="unread_msg_number">1</string> 
         <string name="stchat">STChat</string> 
         <string name="login">Login</string> 
         <string name="ip_setting">IP Setting</string> 
         <string name="change">Change</string> 
         <string name="your_ip_address_">Your IP Address:</string> 
         <string name="bottom">STChat</string> 

</resources>
