<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp" >

    <com.st.stchat.widget.CircularImageView
        android:id="@+id/newFriendHead"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/default_nor_man" />

    <TextView
        android:id="@+id/newContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/newFriendHead"
        android:text="@string/new_contact_name"
        android:textColor="#34495E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newContactName"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/newFriendHead"
        android:text="@string/jonny_add_you_as_a_friend" />

    <TextView
        android:id="@+id/unread_user_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dip"
        android:background="@drawable/reddot"
        android:gravity="center"
        android:text="@string/unread_user_num"
        android:textColor="@android:color/white"
        android:textSize="12dip" >
    </TextView>

</RelativeLayout>