<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blend_dialog_frame"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/blend_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:padding="16dp"
        android:text="@string/admin"
        android:textColor="@color/blend_item_theme_color"
        android:textSize="20sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blend_item_theme_color" />
    
    <TextView
        android:id="@+id/blend_dialog_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/blend_view_bg_default"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/lightblack"
        android:textSize="16.0dip" />

    <View
        android:id="@+id/blend_dialog_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blend_item_divider_color" />

    <TextView
        android:id="@+id/blend_dialog_cancle_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/blend_view_bg_default"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/lightblack"
        android:textSize="16.0dip" />

</LinearLayout>